# install

./: .gitignore  10-mail.conf  Pipfile  code_structure  funcListsGraphs.py  install.sh  libsExtract.sh  main.py  nvBuilder.sh  pyproject.toml  requirements.txt  run_all_tests.py  run_isolated_test.py  run_test_with_mocks.py  run_tests.py  run_tests_complete.py  run_tests_fixed.py  run_tests_single.py  start.sh  test.py  test_checkbox.py  test_config.py  test_config_simple.py  test_execution.py  test_multi_fields.py  test_plugin_config.py  test_plugin_execution.py  test_select.py  test_ssh_plugin.py  tree.txt  update_template_field.py
config/: features.yml  keybindings.yml
docs/: execution_conditionnelle.md  index.html  rapport_execution.md
logs/: debug.log.1  debug.log.2  debug.log.3
plugins/: README_BASH.md  README_PYTHON.md  README_SCRIPT_INTERACTIVE.md
rapports/: rapport_nico_20250327_084559.csv
schemas/: report_schema.yml  sequence_schema.yml  template_schema.yaml
scripts/: get_usb.py  get_users.py
sequences/: conf_imp_scan.yml  configuration_imprimante.yml  imp_remp.yml  install.yml  installation_avancee.yml  installation_complete.yml  installation_complete_v2.yml  installation_imprimante.yml  sequence_schema.yml  suppression_imprimante.yml
templates/: README.md  template_schema.yml
tests/: resultats_tests.md  test_conditional_execution.py  test_erreurs_sequences.py  test_integration_sequences.py  test_sequence_manager.py  test_sequences.py  test_template_field.py  test_template_manager.py
ui/: choice.py  config.py  config.py.bak  config_old.py  (+3 more)
(+453 files in other folders)
