[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pcUtils"
version = "0.1.0"
authors = [
    { name="Nico", email="author@example.com" },
]
description = "PC Utils"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=0.27.0",
    "ruamel.yaml>=0.17.21",
]

[project.scripts]
pcutils = "pcUtils.__main__:main"

[tool.setuptools]
packages = ["ui", "logs", "libs", "plugins"]
